--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@ html[data-theme="dark"] .aud-btn.active {
     <!-- ================================================= -->
 
     <div style="display:flex; justify-content:space-between; align-items:center;">
-      <h2 class="section-title" style="font-size:24px;">Try It — Prove Integrity Yourself</h2>
+      <h2 class="section-title" style="font-size:24px;">TEST Example</h2>
 
       <button id="modeToggle"
         onclick="toggleHashMode()"
