--- a/index.html
+++ b/index.html
@@ -1724,6 +1724,91 @@ ${mutated}
     <br>
   </div>
 
+<!-- ====================================================== -->
+<!-- 🧠 NOVAK EXPERT MODE — ALL FOUR CRYPTO VISUALIZERS     -->
+<!-- ====================================================== -->
+<details class="novak-collapse" style="margin-top:32px;">
+  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
+    🧠 Expert Mode — Cryptographic Visualizers (Click to Expand)
+  </summary>
+
+  <div class="card" style="margin-top:16px; padding:24px;">
+
+    <h2 class="section-title">Expert Mode</h2>
+    <p style="opacity:0.9; font-size:14px;">
+      These tools show NOVAK’s underlying mathematics, hashing behavior, avalanche effect,
+      and digest formats using native WebCrypto — all computed locally on your device.
+    </p>
+
+    <!-- ====================================================== -->
+    <!-- MODE 1: LIVE HASHING                                  -->
+    <!-- ====================================================== -->
+    <h3 style="margin-top:28px;">🔹 Live WebCrypto Hashing</h3>
+    <textarea id="expertInput"
+              placeholder="Type here — live SHA-256 will appear..."
+              style="width:100%; height:90px; margin-top:10px; padding:12px; font-family:'JetBrains Mono', monospace;"></textarea>
+
+    <pre id="expertHash"
+         style="margin-top:14px; font-family:'JetBrains Mono', monospace; white-space:pre-wrap;"></pre>
+
+    <hr style="margin:32px 0; opacity:0.4;">
+
+    <!-- ====================================================== -->
+    <!-- MODE 2: DIGEST VIEWER                                 -->
+    <!-- ====================================================== -->
+    <h3>🔹 Multi-Format Digest Viewer</h3>
+
+    <div style="margin-top:12px;">
+      <button class="digest-btn" onclick="showDigestFormat('hex')">HEX</button>
+      <button class="digest-btn" onclick="showDigestFormat('base64')">BASE64</button>
+      <button class="digest-btn" onclick="showDigestFormat('binary')">BINARY</button>
+    </div>
+
+    <pre id="digestOutput"
+         style="margin-top:14px; font-family:'JetBrains Mono', monospace; white-space:pre-wrap;"></pre>
+
+    <hr style="margin:32px 0; opacity:0.4;">
+
+    <!-- ====================================================== -->
+    <!-- MODE 3: BIT DIFFERENCE HEATMAP                        -->
+    <!-- ====================================================== -->
+    <h3>🔹 Bit-Difference Heatmap</h3>
+
+    <div style="margin-top:10px;">
+      <input id="heatA" placeholder="Input A"
+             style="width:48%; padding:8px; font-family:'JetBrains Mono', monospace;">
+      <input id="heatB" placeholder="Input B"
+             style="width:48%; padding:8px; font-family:'JetBrains Mono', monospace; margin-left:4%;">
+    </div>
+
+    <button class="action-btn" style="margin-top:12px;" onclick="computeHeatmap()">
+      Compute Heatmap
+    </button>
+
+    <div id="heatmap"
+         style="margin-top:16px; display:grid; grid-template-columns:repeat(64, 1fr); gap:2px;"></div>
+
+    <hr style="margin:32px 0; opacity:0.4;">
+
+    <!-- ====================================================== -->
+    <!-- MODE 4: AVALANCHE ANIMATION                           -->
+    <!-- ====================================================== -->
+    <h3>🔹 Avalanche Animation</h3>
+    <input id="avalancheInput"
+           placeholder="Type anything…"
+           style="width:100%; padding:10px; font-family:'JetBrains Mono', monospace;">
+
+    <button class="action-btn" style="margin-top:12px;" onclick="startAvalanche()">
+      Run Avalanche Animation
+    </button>
+
+    <pre id="avalancheFrame"
+         style="margin-top:16px; font-family:'JetBrains Mono', monospace; white-space:pre-wrap;"></pre>
+
+  </div>
+</details>
+
+
 <!-- ✅ INTERACTIVE MINI-GAMES -->
 <div class="card" style="margin-top:32px;">
   <h2 class="section-title">Interactive Integrity Challenges</h2>
