--- a/index.html
+++ b/index.html
@@ -1432,7 +1432,8 @@ async function startAvalanche() {
 <div class="card" style="margin-top:28px; padding:20px;">
   <details>
     <summary style="cursor:pointer; font-size:18px; font-weight:600;">
-    <summary>📌 What Can I Actually Do With This Hash?</summary>
+    📌 What Can I Actually Do With This Hash?
+    </summary>
 
     <div class="collapse-inner">
 <br>
