--- a/index.html
+++ b/index.html
@@ -1664,18 +1664,18 @@ async function startAvalanche() {
 
     <div style="margin-top:16px; font-size:15px; line-height:1.55;">
       
-      <h3 style="font-size:17px; margin-bottom:8px;">🧒 What is Packet Sniffing? (6th Grade Explanation)</h3>
+      <h3 style="font-size:17px; margin-bottom:8px;">🧒 What is Packet Sniffing? (6th Grade Time Machine!)</h3>
 
       <p>
         Imagine you're passing a note to your friend in class.  
         A kid in the middle tries to peek at the note while it moves across the room.
       </p>
-
+<br>
       <p>
         <strong>Packet sniffing</strong> is the computer version of that.  
         Someone tries to look at the messages (the “packets”) computers send across the internet.
       </p>
-
+<br>
       <p>
         Packet sniffing can:
         <ul>
@@ -1698,14 +1698,14 @@ async function startAvalanche() {
       <p>
         Sniffers can observe:
       </p>
-
+<br>
       <ul>
         <li>📨 Input text</li>
         <li>📤 Output text</li>
         <li>🔐 HVET hash (public)</li>
         <li>🧾 EIR receipt (public)</li>
       </ul>
-
+<br>
       <p>There are <strong>no secret keys or tokens</strong> to steal.</p>
 
       <hr style="margin:22px 0; opacity:0.4;">
@@ -1732,16 +1732,16 @@ async function startAvalanche() {
         NOVAK binds <strong>input + rule + output</strong> with HVET and verifies everything
         <strong>before</strong> execution.
       </p>
-
+<br>
       <p>Even if an attacker sees the data, they cannot:</p>
-
+<br>
       <ul>
         <li>Change it</li>
         <li>Reorder it</li>
         <li>Modify it secretly</li>
         <li>Insert fake results</li>
       </ul>
-
+<br>
       <p>
         Because the moment anything changes,  
         <strong>NOVAK's cryptographic truth no longer matches</strong> — the system freezes.
@@ -1753,6 +1753,7 @@ async function startAvalanche() {
 
       <p>
         Traditional systems break when sniffed because they rely on secrecy.
+        <br>
         NOVAK doesn't rely on secrecy — it relies on <strong>mathematical correctness</strong>.
       </p>
 
