--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@ html[data-theme="dark"] .aud-btn.active {
 
 
 <!-- ===================================================== -->
-<!-- ⭐ NEW DROPDOWN: WHAT IS SHA? (6th Grade + Full Technical) -->
+<!-- ⭐ NEW DROPDOWN: WHAT IS SHA? (Simple + Full Technical) -->
 <!-- ===================================================== -->
 
 <details class="novak-collapse" style="margin-top:26px;">
@@ -1014,7 +1014,7 @@ html[data-theme="dark"] .aud-btn.active {
     <!-- 1 — SIMPLE EXPLANATION -->
     <!-- ===================================================== -->
 
-    <h3 style="margin-top:0;">🟦 1. Super Simple (6th Grade Version)</h3>
+    <h3 style="margin-top:0;">🟦 1. Super Simple</h3>
 
     <p>
       <strong>SHA</strong> stands for <strong>Secure Hash Algorithm</strong>.  
