--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
 /* NOVAK Documentation Dropdown    */
 /* =============================== */
 
+/* SHA Education Suite Styling */
+.diagram-box {
+  background: var(--card);
+  border: 1px solid var(--border);
+  padding: 14px;
+  border-radius: 8px;
+  font-family: 'JetBrains Mono', monospace;
+  white-space: pre-wrap;
+  margin-top: 12px;
+}
+
+.sha-table { margin-top: 14px; }
+.sha-row { display: flex; gap: 14px; margin-bottom: 8px; }
+.sha-name { width: 110px; font-weight: 700; padding:6px 10px; border-radius:6px; text-align:center; }
+.sha-desc { flex: 1; padding:6px 0; }
+
+.sha-broken { background:#ffdddd; border:1px solid #cc6666; }
+.sha-good   { background:#e2f4ff; border:1px solid #6aa7ff; }
+.sha-new    { background:#eae1ff; border:1px solid #a78bfa; }
+
+    
 .dropdown {
   position: relative;
   display: inline-block;
