--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@ async function startAvalanche() {
     <h3 class="section-title" style="font-size:20px;">Example Datasets</h3>
 
     <p style="margin-top:6px; font-size:14px;">
-      Select a dataset below — it instantly loads into the input above so you can hash it locally.
+      Select a dataset below — it instantly loads into the input below so you can hash it locally.
     </p>
 
     <div class="pill-row" style="margin-top:16px; display:flex; flex-wrap:wrap; gap:14px;">
