--- a/index.html
+++ b/index.html
@@ -1032,9 +1032,9 @@ html[data-theme="dark"] .aud-btn.active {
   <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
 
     <!-- =================================================== -->
-    <!-- 1. SIMPLE / 6TH GRADE EXPLANATION -->
+    <!-- 1. SIMPLE / Simple EXPLANATION -->
     <!-- =================================================== -->
-    <h2 style="margin-top:0;">🟦 1. SHA Explained (6th Grade Level)</h2>
+    <h2 style="margin-top:0;">🟦 1. SHA Explained (Simple Explanation)</h2>
 
     <p>
       <strong>SHA</strong> stands for <strong>Secure Hash Algorithm</strong>.
